--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2022-09-14-A</name>
+	<name>tema6 14-09-22</name>
 	<comment></comment>
 	<projects>
 	</projects>
